refactor(api): ♻️ 重构集群用户模块DTO/VO架构
重构集群用户模块的数据传输架构：
1. 将ClusterUserVO和ClusterUserDTO改为record类型
2. 服务层接口改为返回DTO类型
3. 控制器层直接返回VO类型结果
4. 优化集合操作使用java.util.stream.Collectors

优化了前后端数据传输结构，提升类型安全性和代码简洁性

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>